<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >



    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="8dp"
        android:gravity="left">

        <TableLayout
            android:layout_width="80dp"
            android:layout_height="match_parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="2dp">


                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_aapl"
                    android:id="@+id/lbl_aapl"
                    android:textStyle="bold"
                    android:textSize="15dp"/>



            </TableRow>

            <TableRow
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lbl_appinc"
                    android:id="@+id/lbl_appinc"
                    android:textSize="8dp"/>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="2dp">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/LblTxtVBid"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/LblTxtVBid"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:paddingTop="2dp"
                    android:textSize="15dp"/>


            </TableRow>

        </TableLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:layout_marginLeft="50dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp">

            <TableRow>
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_txtVOne"
                    android:id="@+id/lbl_txtVOne"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/SpacetxtV5"
                    android:id="@+id/SpacetxtV5"
                    android:textColor="#ffeee1"
                    android:textSize="8dp"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/LblTxtVAsk"
                    android:text="@string/LblTxtVAsk"
                    android:layout_marginLeft="2dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="15dp"/>
            </TableRow>
        </TableLayout>
        </LinearLayout>









    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="1dp"
        android:gravity="right">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:layout_marginTop="1dp"
            android:id="@+id/tblLayout1"
            android:background="@drawable/rounded_corner">

            <TableRow>
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_txtVTwo"
                    android:id="@+id/lbl_txtVTwo"
                    android:textColor="#ffffff"
                    android:gravity="center_horizontal"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_txtVThree"
                    android:id="@+id/lbl_txtVThree"
                    android:textColor="#ffffff"
                    android:gravity="center_horizontal"
                    android:textSize="20dp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>